# olympics

./: README.md  pyproject.toml
olympics/: db.py
tests/: test_api.py  test_cli.py  test_db.py
