[tool.setuptools]
packages = []

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]',
  'pytest-cov'
]
[tool.pytest.ini_options]
addopts = "--cov -v  --cov-report term-missing"
[tool.coverage.run]
branch = true
include = ["olympics/*", "tests/*"]
